# foghorn

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DESCRIPTION.txt  Dockerfile  Dockerfile-armhf  LICENSE  MAKEFILE.md  Makefile  README-DEV.md  README.md  RFCs.md  WARP.md  config.yaml  config_parser.py  docker-compose.yaml  entrypoint.sh  foghorn-workflow.md  foo.sh  greylist.db  pyproject.toml  requirements.txt  schema.json  todo.md  toggle_baseline.sh
.github/workflows/: codeql.yml  publish.yml  pytest.yml
assets/: config-schema.json  config-yaml.schema  favicon.xcf  graph-overview.dot  graph.dot  query.dot  query.xcf  rebuild_from_query_log.py
docker/: docker-compose.yaml  stack.env
docs/: API.md  MAKEFILE.md  PiholeConfig.md  README-DEV.md  RFCs.md  open-ssl-make-easy.md  openssh-key-records.md  query-log-hardening.md
example_configs/: axfr_client.yaml  axfr_server.yaml  cache_customize_caches.yaml  cache_in_memory_ttl.yaml  cache_mysql_mariadb.yaml  cache_none.yaml  cache_postgres.yaml  cache_redis.yaml  cache_sqlite3.yaml  config-example.yaml  kitchen_sink.yaml  net_dnssec_modes.yaml  net_listen_dot.yaml  net_listen_multi_interfaces.yaml  net_listen_udp_tcp.yaml  net_upstream_dot.yaml  net_upstream_mixed.yaml  net_upstream_udp.yaml  plugin_access_control.yaml  plugin_custom_records.yaml  plugin_dns_rebinding.yaml  plugin_etc_hosts.yaml  plugin_examples.yaml  plugin_filedownloader_and_filter.yaml  plugin_filter.yaml  plugin_flakey_server.yaml  plugin_flaky_server.yaml  plugin_greylist.yaml  plugin_listdownloader_and_filter.yaml  plugin_mdns.yaml  plugin_new_domain_filter.yaml  plugin_profiles_example.yaml  plugin_rate_limit.yaml  plugin_upstream_router.yaml  plugin_zone.yaml  plugin_zone_records_axfr.yaml  plugin_zone_update.yaml  plugin_zone_update_all_options.yaml  server_all_options.yaml  simple.yaml  (+7 more)
example_configs/axfr/: client.yaml  server.yaml
example_configs/bind/: Dockerfile
example_configs/lists/: allowlist.txt  blocklist.txt
example_configs/logging/: query_log_hardening.yaml
example_configs/plugins/: echo.yaml
html/: config-schema.json  config-yaml.schema  index.html  index_LOCAL_694359.html  index_REMOTE_694359.html  styles.css
images/: foghorn-workflow-full.mmd  foghorn-workflow-user.mmd  foghorn-workflow.mmd
release-notes/: v0.1.0-rc2.md  v0.1.0-rc2.tagmsg  v0.1.0.md  v0.1.0.tagmsg
scripts/: build_admin_ui_bundle.py  check_per_file_coverage.py  dump_effective_config.py  gen_release_notes.py  generate_arch_diagram.py  generate_config_diagram.py  generate_config_mermaid.py  generate_dns_update_keys.py  generate_foghorn_schema.py  generate_plugin_schema.py  generate_workflow_diagram.py  generate_zone_dnssec.py  git-prune-branches.sh  git-prune-branches.she  publish_foghorn.sh  rebuild_from_query_log.py  run_coverage.sh  ssh_host_key_hex.py  sshfp_scan.py
src/foghorn/: __init__.py  app.py  cache.py  config_parser.py  config_schema.py  current_cache.py  dnssec_validate.py  doh_api.py  doh_server.py  dot_server.py  index.html  logging_config.py  main.py  main_config_helpers.py  recursive_cache.py  recursive_resolver.py  recursive_transport.py  runtime_config.py  security_limits.py  server.py  sqlite_cache.py  stats.py  tcp_server.py  trust_anchors.py  udp_server.py  webserver.py
tests/: conftest.py  conftest_cov_fallback.py  test_app_module.py  test_cache.py  test_config_diagram.py  test_config_diagram_unit.py  test_config_dump.py  test_config_mermaid_unit.py  test_config_parser.py  test_config_schema.py  test_config_schema_security.py  test_current_cache.py  test_dnssec_validate.py  test_dnssec_validate_chains.py  test_dnssec_validate_more_coverage.py  test_dnssec_validate_negative.py  test_fallback_servers.py  test_filter_plugin.py  test_filter_plugin_comprehensive.py  test_generate_foghorn_schema.py  test_greylist_plugin.py  test_logging_config.py  test_main.py  test_main_additional_coverage.py  test_main_doh_listener.py  test_main_doh_webserver_failures.py  test_main_dot_missing_cert.py  test_main_entrypoint.py  test_main_statistics.py  test_main_stats_persistence.py  test_main_tcp_listener.py  test_main_udp_asyncio_listener.py  test_main_upstream_doh_normalize.py  test_multi_upstream_failover.py  test_plugin_priorities.py  test_plugin_sigusr2.py  test_recursive_cache.py  test_recursive_resolver.py  test_recursive_resolver_integration.py  test_recursive_transport_facade.py  (+30 more)
tests/cache_plugins/: test_cache_base.py  test_in_memory_ttl_branches.py  test_memcached_cache.py  test_memcached_cache_docker.py  test_mongodb_cache.py  test_mongodb_cache_docker.py  test_mysql_mariadb_cache.py  test_mysql_mariadb_cache_docker.py  test_mysql_ttl_backend.py  test_null_cache.py  test_postgres_cache.py  test_postgres_cache_docker.py  test_postgres_ttl_backend.py  test_redis_cache.py  test_redis_cache_docker.py  test_sqlite3_cache.py  test_sqlite_ttl_cache_backend.py
tests/config/: test_config_schema_internals.py  test_plugin_profiles.py  test_rate_limit_check.py
tests/dnssec/: test_zone_helpers_logging.py  test_zone_signer.py
tests/plugins/: test_01_base.py  test_02_registry.py  test_03_plugins_init.py  test_access_control.py  test_base.py  test_base_additional.py  test_base_more_coverage.py  test_custom_records.py  test_dns_prefetch.py  test_dns_rebinding.py  test_docker_hosts.py  test_echo.py  test_etc_hosts.py  test_etc_hosts_extra.py  test_etc_hosts_file_paths.py  test_etc_hosts_inotify.py  test_etc_hosts_ipv6_answer.py  test_etc_hosts_ipv6_mismatch.py  test_etc_hosts_malformed.py  test_etc_hosts_watchdog.py  test_examples.py  test_file_downloader.py  test_file_over_dns.py  test_filter_plugin.py  test_filter_plugin_files_extra.py  test_filter_plugin_jsonl.py  test_finger.py  test_flakey_server.py  test_flaky_server.py  test_flaky_server_extra.py  test_greylist_plugin.py  test_list_downloader.py  test_mdns.py  test_mqtt_logging.py  test_new_domain_filter.py  test_new_domain_filter_extra.py  test_new_domain_filter_whois.py  test_rate_limit.py  test_registry.py  (+21 more)
tools/: cleanup_duplicated_tests.py
(+296 files in other folders)
