[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foghorn"
version = "0.6.3"
description = "Foghorn is a fast, pluggable DNS server that caches, filters, routes, and bends DNS to your will. Up- and down-stream UDP, TCP, DoT, and DoH. DNSEC. Because DNS should do what you want."

authors = [ { name = "Zack Allison", email = "zack@zackallison.com" } ]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cachetools",
  "cryptography",
  "dnslib>=0.9.24",
  "dnspython>=2.6.1",
  "docker>=7.0.0",
  "fastapi>=0.111.0",
  "jsonschema>=4.17.3",
  "mariadb",
  "mysql-connector-python",
  "paho-mqtt",
  "paramiko",
  "psutil",
  "pyyaml>=6.0.1",
  "requests>=2.31.0",
  "uvicorn>=0.30.0",
  "watchdog",
  "zeroconf"
]

[project.optional-dependencies]

example_plugins = [
  "whois",
]

dev = [
   "black",
   "build",
   "coverage",
   "httpx",
   "isort",
   "pytest",
   "pytest-cov",
   "ruff",
   "twine",
]

examples = [
  "whois",
]

[project.scripts]
foghorn = "foghorn.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--ff --maxfail=1 --disable-warnings"

[tool.ruff.lint.per-file-ignores]
"*" = ["E402"]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.isort]
profile = "black"
