[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foghorn"
version = "0.6.5b1"
description = "Foghorn is a fast, pluggable DNS server that caches, filters, routes, and bends DNS to your will. Up- and down-stream UDP, TCP, DoT, and DoH. DNSEC. Because DNS should do what you want."

authors = [ { name = "Zack Allison", email = "zack@zackallison.com" } ]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cachetools",
  "cryptography",
  "dnslib>=0.9.24",
  "dnspython>=2.6.1",
  "fastapi>=0.111.0",
  "jsonschema>=4.17.3",
  "psutil",
  "pyyaml>=6.0.1",
  "requests>=2.31.0",
  "uvicorn>=0.30.0",
# SSH utility
  "paramiko",
# Plugins
  "docker>=7.0.0",
  "watchdog",
  "zeroconf",
# Databases
  "mariadb",
  "mysql-connector-python",
  "paho-mqtt",
  "psycopg2-binary",
  "pymemcache",
  "pymongo",
  "redis",
]

[project.optional-dependencies]

example_plugins = [
  "whois",
]

dev = [
   "black",
   "build",
   "coverage",
   "httpx",
   "isort",
   "pytest",
   "pytest-cov",
   "ruff",
   "twine",
]

examples = [
  "whois",
]

[project.scripts]
foghorn = "foghorn.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
# Include the built-in admin web UI assets in wheels/installs so the webserver
# can serve / and /index.html when running from an installed package.
"foghorn" = ["html/*", "html/**/*"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--ff --maxfail=1 --disable-warnings -m 'not docker'"
markers = [
    "docker: mark test as requiring docker (deselect with '-m not docker')",
]

[tool.ruff.lint.per-file-ignores]
"*" = ["E402"]
"src/foghorn/plugins/resolve/*" = ["E402", "F401"]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
"src/foghorn/servers/webserver/*.py" = ["F401", "F811"]

[tool.isort]
profile = "black"
