[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foghorn"
version = "0.7.0rc3"
description = "Foghorn is a fast, pluggable DNS server that caches, filters, routes, and bends DNS to your will. Up- and down-stream UDP, TCP, DoT, and DoH. DNSEC. Because DNS should do what you want."

authors = [ { name = "Zack Allison", email = "zack@zackallison.com" } ]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
# Core
  "cachetools",         # function caches. "technically" optional
  "dnslib>=0.9.24",     # On-wire DNS primitives <-> python objects
  "jsonschema>=4.17.3", # Validate config
  "pydantic",           # Type checking
  "pyyaml>=6.0.1",      # Read config
  "requests>=2.31.0",   # Various, including DoH and health for the Dockerfile
# DNSSEC
  "cryptography",
  "dnspython>=2.6.1",
# Admin UI and DoH server
  "fastapi>=0.111.0",
  "psutil",
  "python-multipart",
  "uvicorn>=0.30.0",
# SSH utility
  "paramiko",
# Plugins
  "docker>=7.0.0",
  "publicsuffix2",      # Public Suffix List (PSL) aware domain parsing
  "watchdog",
  "zeroconf",
# Databases
  "mariadb",
  "mysql-connector-python",
  "paho-mqtt",
  "psycopg2",
  "pymemcache",
  "pymongo",
  "redis",
]

[project.optional-dependencies]

example_plugins = [
  "whois",
]

dev = [
   "black",
   "build",
   "coverage",
   "httpx",
   "isort",
   "pytest",
   "pytest-cov",
   "ruff",
   "twine",
]

[project.scripts]
foghorn = "foghorn.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
# Include the built-in admin web UI assets in wheels/installs so the webserver
# can serve / and /index.html when running from an installed package.
#
# Also include built-in plugin profile YAML files (e.g. rate_limit_profiles.yaml)
# so importlib.resources can load them from installed distributions.
"foghorn" = ["html/*", "html/**/*", "plugins/resolve/*_profiles.yaml"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--ff --maxfail=1 --disable-warnings -m 'not docker'"

# Docker tests download and runs containers of database servers to test against.
# This ensures everything works in a real environment. This is expensive, so
# skipped by default.
markers = [
	"docker: mark test as requiring docker (deselect with '-m not docker')",
]

[tool.ruff.lint.per-file-ignores]
# Ignore "import not at top!"
"*" = ["E402"]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
# Imports and rexports "unused" functions
"src/foghorn/servers/webserver/*.py" = ["F401"]

[tool.isort]
profile = "black"
